--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 29
@@ -23,7 +24,7 @@ android {
         enabled true
     }
     buildTypes.each {
-        it.buildConfigField("String", "ZOMATO_API_KEY", ZOMATO_API)
+        it.buildConfigField("String", "ZOMATO_API_KEY", ZOMATO_API_KEY)
         it.buildConfigField("String", "ZOMATO_BASE_URL", ZOMATO_BASE_URL)
         it.buildConfigField("String", "DEFAULT_LOGITUDE", DEFAULT_LONGITUDE)
         it.buildConfigField("String", "DEFAULT_LATITUDE", DEFAULT_LATITUDE)
@@ -46,16 +47,15 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
-    implementation 'com.google.dagger:dagger:2.12'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
