--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.0'
-
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
