--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'dagger.hilt.android.plugin'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.soumya.wwdablu.zomatobuddy"
+        applicationId "com.soumya.wwdablu.hungry"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 6
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
 
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
