Restaurant Details WIP
Ability to extract res photos from HTML is also added here

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CollectionsActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.RestaurantDetailsActivity"></activity>
+        <activity
+            android:name=".activity.CollectionsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.DashboardActivity"
             android:theme="@style/AppTheme.NoActionBar" />
