--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,31 +7,41 @@
 
     <application
         android:name=".HungryApplication"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PhotoViewerActivity"></activity>
-        <activity android:name=".activity.RestaurantDetailsActivity" />
+
+        <activity android:name=".CollectionDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
+
+        <activity android:name=".activity.PhotoViewerActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".activity.RestaurantDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
+
         <activity
             android:name=".activity.CollectionsActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
+
         <activity
             android:name=".activity.DashboardActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activity.LocationAccess"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activity.SplashScreen"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
