Search feature WIP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,32 +12,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".activity.CollectionDetailsActivity"
+        <activity android:name=".activity.SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activity.CollectionDetailsActivity"
             android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
-
-        <activity android:name=".activity.PhotoViewerActivity"
+        <activity
+            android:name=".activity.PhotoViewerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity android:name=".activity.RestaurantDetailsActivity"
+        <activity
+            android:name=".activity.RestaurantDetailsActivity"
             android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
-
         <activity
             android:name=".activity.CollectionsActivity"
             android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
-
         <activity
             android:name=".activity.DashboardActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.LocationAccess"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.SplashScreen"
             android:screenOrientation="portrait"
