--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -47,8 +50,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-
     implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     implementation 'com.google.android.gms:play-services-location:17.1.0'
 
