--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SearchActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.GenericSearchResultActivity"></activity>
+        <activity
+            android:name=".activity.SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.CollectionDetailsActivity"
             android:theme="@style/AppTheme.NoActionBar.TransparentNavi" />
