--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.5.0'
 
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     //Glide - Image handling
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -90,6 +92,8 @@ dependencies {
 
     //Phone input field with flag and country code
     implementation 'com.github.wwdablu:PhoneInputExt:1.0.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
